Colab을 통해 생성됨

--- a/Chap05_05_Learn_Implement_from_Back_Propagation.ipynb
+++ b/Chap05_05_Learn_Implement_from_Back_Propagation.ipynb
@@ -8,8 +8,7 @@
         "NdmZnK-m2Jgu"
       ],
       "gpuType": "T4",
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyP/74gvmvkIr/ZyudcJKTRE",
+      "authorship_tag": "ABX9TyMFmkAW0A+o61KhfR60QNUi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +67,7 @@
         "mnist.load_data()\n",
         "\n",
         "def sigmoid(x):\n",
-        "  return 1 / 1+ np.exp(-x)\n",
+        "  return 1 / (1+ np.exp(-x))\n",
         "\n",
         "def softmax(a):\n",
         "  if a.ndim==2:\n",
@@ -81,53 +80,68 @@
         "\n",
         "def CEE(y, t):\n",
         "  if y.ndim==1:\n",
-        "    y.reshape = (y.shape[0], -1)\n",
-        "    t.reshape = (t.shape[0], -1)\n",
+        "    y = y.shape(1, -1)\n",
+        "    t = t.shape(1, -1)\n",
+        "\n",
+        "  # if t.shape != y.shape:\n",
+        "  #   t = np.argmax(t, axis=1)\n",
+        "\n",
         "  batch_size = y.shape[0]\n",
-        "  loss = np.log(np.sum( y[np.arange(batch_size),t] )) /batch_size\n",
+        "  loss = -np.log(np.sum( y[np.arange(batch_size),t]+1e-7 )) /batch_size\n",
         "  return loss\n",
         "\n",
-        "def _nobatch_numerical_gradient(f,x):\n",
-        "  h = 1e-4\n",
-        "  grad = np.zeros_like(x)\n",
-        "  for idx in range(x.size):\n",
-        "    tmp_val = idx\n",
-        "    x[idx] = float(tmp_val)+h\n",
-        "    fxh1 = f(x)\n",
+        "# def _nobatch_numerical_gradient(f,x):\n",
+        "#   h = 1e-4\n",
+        "#   grad = np.zeros_like(x)\n",
+        "#   for idx in range(x.size):\n",
+        "#     tmp_val = x[idx]\n",
+        "#     x[idx] = float(tmp_val)+h\n",
+        "#     fxh1 = f(x)\n",
         "\n",
-        "    x[idx] = tmp_val -h\n",
-        "    fxh2 = f(x)\n",
-        "    grad[idx] = (fxh1- fxh2) / 2* h\n",
-        "    x[idx] = tmp_val\n",
-        "  return grad\n",
+        "#     x[idx] = tmp_val -h\n",
+        "#     fxh2 = f(x)\n",
+        "#     grad[idx] = (fxh1- fxh2) / 2* h\n",
+        "#     x[idx] = tmp_val\n",
+        "#   return grad\n",
+        "\n",
+        "\n",
+        "def _nobatch_numerical_gradient(f, x):\n",
+        "    h = 1e-4\n",
+        "    grad = np.zeros_like(x)\n",
+        "\n",
+        "    it = np.nditer(x, flags=['multi_index'], op_flags=['readwrite'])\n",
+        "    while not it.finished:\n",
+        "        idx = it.multi_index\n",
+        "        tmp_val = x[idx]\n",
+        "\n",
+        "        x[idx] = float(tmp_val) + h\n",
+        "        fxh1 = f(x)  # f는 loss(x, t)\n",
+        "\n",
+        "        x[idx] = tmp_val - h\n",
+        "        fxh2 = f(x)\n",
+        "\n",
+        "        grad[idx] = (fxh1 - fxh2) / (2 * h)\n",
+        "        x[idx] = tmp_val\n",
+        "        it.iternext()\n",
+        "\n",
+        "    return grad\n",
+        "\n",
+        "\n",
         "\n",
         "def numerical_gradient(f,X):\n",
         "  if X.ndim==1:\n",
         "    return _nobatch_numerical_gradient(f,X)\n",
         "  else:\n",
         "    grad = np.zeros_like(X)\n",
-        "    for idx in enumerate(X):\n",
-        "      grad[idx] = _nobatch_numerical_gradient(f,idx)\n",
-        "    return grad"
+        "    for i, idx in enumerate(X):\n",
+        "      grad[i] = _nobatch_numerical_gradient(f,idx)\n",
+        "    return grad\n"
       ],
       "metadata": {
-        "id": "Kr-l8Vlhp14C",
-        "outputId": "d1bb0fc7-ea16-4b22-a86f-7d76d0230507",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "Kr-l8Vlhp14C"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 0us/step\n"
-          ]
-        }
-      ]
+      "execution_count": 152,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -192,6 +206,7 @@
         "    self.loss = None\n",
         "    self.y = None\n",
         "    self.t = None\n",
+        "\n",
         "  def forward(self, x, t):\n",
         "    self.t = t\n",
         "    self.y = softmax(x)\n",
@@ -213,7 +228,7 @@
       "metadata": {
         "id": "vtw0IAx4vIy0"
       },
-      "execution_count": 2,
+      "execution_count": 139,
       "outputs": []
     },
     {
@@ -275,7 +290,7 @@
         "    return accuracy\n",
         "\n",
         "  def numerical_gradient(self, x, t):\n",
-        "    loss_w = lambda t: self.loss(x,t)\n",
+        "    loss_w = lambda w: self.loss(x,t)\n",
         "    grads={}\n",
         "    grads['W1'] = numerical_gradient(loss_w, self.params['W1'])\n",
         "    grads['b1'] = numerical_gradient(loss_w, self.params['b1'])\n",
@@ -305,7 +320,7 @@
       "metadata": {
         "id": "cd8v8rTZsA8u"
       },
-      "execution_count": 17,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -353,15 +368,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mmI-vJKCr--y",
-        "outputId": "995f60b0-98c2-4ba6-9ee1-bf5cbfdd6b53"
+        "outputId": "b20a4603-01a0-418b-e6cb-686e495b989b"
       },
-      "execution_count": 4,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "odict_values([<__main__.Affine object at 0x7c5edf0de310>, <__main__.Relu object at 0x7c5edf0e7590>, <__main__.Affine object at 0x7c5edf09fb10>])\n",
+            "odict_values([<__main__.Affine object at 0x7e5618a61650>, <__main__.Relu object at 0x7e561a4bfe50>, <__main__.Affine object at 0x7e5613ff96d0>])\n",
             "odict_keys(['Affine1', 'Relu1', 'Affine2'])\n"
           ]
         }
@@ -412,9 +427,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "24876FfJubTD",
-        "outputId": "e9cc729e-23b4-4636-a09b-dd8e30d2fc52"
+        "outputId": "bc2de3db-6c3c-49df-cb74-9bccd50d0be4"
       },
-      "execution_count": 5,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,12 +468,12 @@
       ],
       "metadata": {
         "id": "IBAsm0a_5Jvj",
-        "outputId": "65467f8c-9c74-4b98-e01c-00028c71206a",
+        "outputId": "a09f6994-e9fd-4a97-e5df-7aba3b34a007",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": 143,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,21 +498,21 @@
       ],
       "metadata": {
         "id": "WfKc3Ge76TPF",
-        "outputId": "80cc235b-3253-44df-98b4-8fbeeccec362",
+        "outputId": "8f091156-5746-4cb9-e010-53e7a132b01f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 0.28498767  0.3096441   0.13154822 -1.43104701  0.2654738   0.68445922\n",
-            "  -1.05229084  1.0601583  -0.49596258  0.31067369 -1.0412422   0.843272\n",
-            "  -0.96830638 -1.0106107   0.1534038   0.86709287]]\n",
-            "[np.float64(0.8670928659677744), np.float64(0.1534038031851153), np.float64(-1.0106106971879436), np.float64(-0.9683063755003083), np.float64(0.8432720000335024), np.float64(-1.0412421968179753), np.float64(0.3106736924452418), np.float64(-0.49596257685647566), np.float64(1.0601582975161092), np.float64(-1.0522908361750074), np.float64(0.6844592233888573), np.float64(0.26547380125433234), np.float64(-1.4310470088869331), np.float64(0.1315482234210063), np.float64(0.3096441041857726), np.float64(0.284987665868146)]\n"
+            "[[ 1.33485351 -0.56557682 -0.75752613  1.30819602  1.34722249  0.86163106\n",
+            "   0.20729667 -0.47095863 -0.81234116 -0.5079782   1.71646801  0.80812033\n",
+            "   0.62714675 -0.97205935  1.06317749  1.5593041 ]]\n",
+            "[np.float64(1.5593041034347286), np.float64(1.0631774942694248), np.float64(-0.9720593457029498), np.float64(0.6271467452883617), np.float64(0.808120332126001), np.float64(1.7164680095128189), np.float64(-0.5079782010104156), np.float64(-0.8123411628886149), np.float64(-0.4709586263724586), np.float64(0.20729666915814238), np.float64(0.8616310642892326), np.float64(1.3472224882653772), np.float64(1.3081960224757843), np.float64(-0.7575261346579595), np.float64(-0.5655768174700001), np.float64(1.3348535068549987)]\n"
           ]
         }
       ]
@@ -515,7 +530,7 @@
       "metadata": {
         "id": "fw2u9DYUuxdj"
       },
-      "execution_count": 7,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -590,34 +605,34 @@
       ],
       "metadata": {
         "id": "B_ymg2fuuxYV",
-        "outputId": "91c56f11-f358-42dd-f815-a7d90b979cc6",
+        "outputId": "10720422-44c3-47df-fba5-124102bac693",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.11115 0.1037\n",
-            "0.9015 0.9029\n",
-            "0.9229666666666667 0.9248\n",
-            "0.93685 0.9373\n",
-            "0.9457 0.9447\n",
-            "0.9528166666666666 0.9516\n",
-            "0.9586 0.957\n",
-            "0.9615166666666667 0.9591\n",
-            "0.96555 0.9619\n",
-            "0.96785 0.9648\n",
-            "0.9708 0.9649\n",
-            "0.9722833333333334 0.9681\n",
-            "0.9731166666666666 0.9665\n",
-            "0.9763833333333334 0.9689\n",
-            "0.9776166666666667 0.9688\n",
-            "0.9785666666666667 0.9694\n",
-            "0.9788333333333333 0.9689\n"
+            "0.13795 0.1419\n",
+            "0.9060666666666667 0.9099\n",
+            "0.92325 0.9261\n",
+            "0.9366833333333333 0.9345\n",
+            "0.9452666666666667 0.942\n",
+            "0.9517666666666666 0.9499\n",
+            "0.9565 0.9547\n",
+            "0.9599 0.9562\n",
+            "0.9647 0.9584\n",
+            "0.96635 0.9621\n",
+            "0.9685333333333334 0.9641\n",
+            "0.96935 0.9653\n",
+            "0.9723166666666667 0.9672\n",
+            "0.9749166666666667 0.9684\n",
+            "0.97655 0.9686\n",
+            "0.9773333333333334 0.9714\n",
+            "0.97885 0.9713\n"
           ]
         }
       ]
@@ -648,22 +663,22 @@
       ],
       "metadata": {
         "id": "nG7fErlC0ZEw",
-        "outputId": "33c585a6-9f8e-40b7-c5c0-e53c169b6f00",
+        "outputId": "c0067304-a6da-4da9-b5d6-5b659f31dfbd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([2, 1, 0])"
+              "array([4, 3, 1])"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 146
         }
       ]
     },
@@ -677,12 +692,246 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Gradient Check"
+      ],
+      "metadata": {
+        "id": "on2OBZiSKy1J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.datasets import mnist\n",
+        "\n",
+        "(x_train, t_train), (x_test, t_test) = mnist.load_data()\n",
+        "\n",
+        "x_train = x_train.reshape(-1, 784).astype('float32') / 255.0\n",
+        "x_test = x_test.reshape(-1, 784).astype('float32') / 255.0\n",
+        "\n",
+        "network=TwolayerNet(input_size = 784, hidden_size = 50, output_size=10)\n",
+        "\n",
+        "##\n",
+        "def to_one_hot(t, num_classes =10):\n",
+        "  if t.ndim ==1:\n",
+        "    one_hot = np.zeros((t.size, num_classes))\n",
+        "    one_hot[np.arange(t.size), t] = 1\n",
+        "    return one_hot\n",
+        "  return t\n",
+        "###### one- hot label\n",
+        "# => 사실 할필요 없음 numerical_gradient에서 nditer를 잡아주는게 더 중요!\n",
+        "\n",
+        "x_batch = x_train[:3]\n",
+        "t_batch = t_train[:3]\n",
+        "# t_batch = to_one_hot(t_batch)\n",
+        "\n",
+        "grad_numerical = network.numerical_gradient(x_batch, t_batch) # numerical로 구한 grad\n",
+        "grad_backprop = network.gradient(x_batch, t_batch) # 역전파로 구한 grad\n",
+        "\n",
+        "for key in grad_numerical.keys():\n",
+        "  diff = np.average(np.abs(grad_backprop[key])- grad_numerical[key] )\n",
+        "  print(key + ':' + str(diff))"
+      ],
+      "metadata": {
+        "id": "Qkoig0EwwKMN",
+        "outputId": "3d8570e3-68f8-40d3-c9c0-3ec09b6d61cb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "W1:0.00042239908503335525\n",
+            "b1:0.002434071911141192\n",
+            "W2:0.0048767629377386825\n",
+            "b2:0.13992135027259817\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "그냥 numerical_gradient에서는 오류가뜸!"
+      ],
+      "metadata": {
+        "id": "xa7IqEtGTPxl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "dictionary 형태로 4개, W1, b1, W2, b2로 취함"
+      ],
+      "metadata": {
+        "id": "5PvaLVfbe2gG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### nditer로의 numerical_gradient 수정"
+      ],
+      "metadata": {
+        "id": "ru-t4lkFYrBY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def numerical_gradient(f, x):\n",
+        "  h= 1e-4\n",
+        "  grad = np.zeros_like(x)\n",
+        "\n",
+        "  for i in range(x.size):\n",
+        "    tmp_val = x[i]\n",
+        "    x = float(tmp_val)+h\n",
+        "    fxh1 = f(x)\n",
+        "\n",
+        "    x = tmp_val - h\n",
+        "    fxh2 = f(x)\n",
+        "    grad[i] = ( fxh1 - fxh2) / ( 2*h )\n",
+        "    x = tmp_val\n",
+        "  return grad\n"
+      ],
+      "metadata": {
+        "id": "t1sDW7Q2TSgc"
+      },
+      "execution_count": 148,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "pius = np.random.choice(29,6).reshape(2,3)\n",
+        "print(pius)\n",
+        "its = np.nditer(pius, flags=['multi_index'], op_flags=['readwrite'])\n",
+        "while not its.finished:\n",
+        "  idx = its.multi_index\n",
+        "  print(f'index : {idx}, value :{pius[idx]}')\n",
+        "\n",
+        "  its.iternext()"
+      ],
+      "metadata": {
+        "id": "OeQXObdmL_Ph",
+        "outputId": "38a85972-b75d-4b09-d870-f0671cc18783",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 6 26 26]\n",
+            " [25 12  8]]\n",
+            "index : (0, 0), value :6\n",
+            "index : (0, 1), value :26\n",
+            "index : (0, 2), value :26\n",
+            "index : (1, 0), value :25\n",
+            "index : (1, 1), value :12\n",
+            "index : (1, 2), value :8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def Last_nobatch_numerical_gradient(f,x):\n",
+        "  h = 1e-4\n",
+        "  grad = np.zeros_like(x)\n",
+        "\n",
+        "  itt= np.nditer(x, flags=['multi_index'], op_flags=['readwrite'])\n",
+        "  while not itt.finished:\n",
+        "    idx = itt.multi_index\n",
+        "    tmp = x[idx]\n",
+        "    x[idx] = float(tmp) + h\n",
+        "    fxh1 = f(x)\n",
+        "\n",
+        "    x[idx] = tmp - h\n",
+        "    fxh2 = f(x)\n",
+        "\n",
+        "    grad[idx] = (fxh1 - fxh2) / (2 * h)\n",
+        "    x[idx] = tmp\n",
+        "    itt.iternext()\n",
+        "  return grad\n",
+        "\n",
+        "def real_numerical_gradient(f,X):\n",
+        "  if X.ndim==1:\n",
+        "    return Last_nobatch_numerical_gradient(f,X)\n",
+        "  else :\n",
+        "    grad = np.zeros_like(X)\n",
+        "    for i, idx in enumerate(X):\n",
+        "      grad[i] = Last_nobatch_numerical_gradient(f, idx)\n",
+        "    return grad\n",
+        "\n",
+        "\n",
+        "x = np.arange(-5,5,0.1).flatten()\n",
+        "\n",
+        "f= lambda t : np.sum(t**2+t+2)\n",
+        "gradi = real_numerical_gradient(f,x)\n",
+        "print(gradi)"
+      ],
+      "metadata": {
+        "id": "q4bFHr-IYmBC",
+        "outputId": "ab9cc1e9-e0b5-4646-9628-7cf31cae97a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-9.  -8.8 -8.6 -8.4 -8.2 -8.  -7.8 -7.6 -7.4 -7.2 -7.  -6.8 -6.6 -6.4\n",
+            " -6.2 -6.  -5.8 -5.6 -5.4 -5.2 -5.  -4.8 -4.6 -4.4 -4.2 -4.  -3.8 -3.6\n",
+            " -3.4 -3.2 -3.  -2.8 -2.6 -2.4 -2.2 -2.  -1.8 -1.6 -1.4 -1.2 -1.  -0.8\n",
+            " -0.6 -0.4 -0.2  0.   0.2  0.4  0.6  0.8  1.   1.2  1.4  1.6  1.8  2.\n",
+            "  2.2  2.4  2.6  2.8  3.   3.2  3.4  3.6  3.8  4.   4.2  4.4  4.6  4.8\n",
+            "  5.   5.2  5.4  5.6  5.8  6.   6.2  6.4  6.6  6.8  7.   7.2  7.4  7.6\n",
+            "  7.8  8.   8.2  8.4  8.6  8.8  9.   9.2  9.4  9.6  9.8 10.  10.2 10.4\n",
+            " 10.6 10.8]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "nditer로의 multi_index를 잡아서 numerical_gradient에 설정해줘야함.\n",
+        "\n",
+        "\n",
+        "| 이유                      | 설명                                           |\n",
+        "| ----------------------- | -------------------------------------------- |\n",
+        "| ✅ **다차원 배열** 지원         | 1D, 2D, 3D 어떤 배열도 안전하게 순회                    |\n",
+        "| ✅ **정확한 좌표 접근**         | `multi_index`로 정확한 인덱스 지정 가능                 |\n",
+        "| ✅ **값 수정 가능**           | `op_flags=['readwrite']`로 `x[idx]`에 직접 접근 가능 |\n",
+        "| ✅ **Gradient 계산 핵심 도구** | 각 요소에 대해 +h/-h 적용해 미분값 추출                    |\n"
+      ],
+      "metadata": {
+        "id": "7npI28AdWjBt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Qkoig0EwwKMN"
+        "id": "suuQ7455YD1Z"
       },
-      "execution_count": null,
+      "execution_count": 150,
       "outputs": []
     }
   ]
